styles.css
* {
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
}

body {
    display: flex;
    flex-direction: column;

    font-family: 'Roboto';

    margin: 0px;
    padding: 0px;
}

ul {
    display: flex;
    list-style: none; 
    gap: 20px;
    margin: 50px;
    color: #F9FAF8;
}

li {

}

a {

}

/* HEADER */

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1F2937;
    height: 50px;

    padding-left: 200px;
    padding-right: 200px;

    padding-top: 20px;

    /* border: 5px solid lightskyblue; */
}

    .header-logo {
        margin: 50px;
        font-weight: 900;
        font-size: 24px;
        color: #F9FAF8;

    }

    .nav-bar {

    }

/* CONTENT */

.content {
    display: flex;
    flex-direction: column;

    /* padding-left: 200px;
    padding-right: 200px; */

    /* border: 5px solid lightgray; */

}

    .HERO-txt {
        display: flex;
        justify-content: space-between;

        background-color: #1F2937;
        padding-top: 50px;
        padding-bottom: 50px;

        padding-left: 240px;
        padding-right: 240px;


        /* border: 4px solid lightseagreen; */

    }

        .HERO-left {

            /* border: 2px solid red; */

        }

        .HERO-right {
            display: flex;
            align-items: center;
            justify-content: center;
    
            background-color: #E5E7EB;
            padding: 30px;
            width: 400px;
            height: 150px;

        }

            .main-text {
                font-size: 48px;
                font-weight: 900;
                color: #F9FAF8;
                margin-top: 10px;
                margin-left: 10px;
                margin-right: 10px;

            }

            .sub-text {
                color: #E5E7EB;
                margin-top: 10px;
                margin-left: 10px;
                margin-right: 10px;

            }

            .button {
                display: inline-flex;
                justify-content: flex-start;
                padding: 10px;
                margin: 10px;
                
                
                background-color: #3882F6;

            }

            .img-place {

            }

    .info {
        display: flex;
        flex-direction: column;
        justify-content: center;
        gap: 0px;
        /* width: 600px; */

        padding-left: 175px;
        padding-right: 175px;
        

    }

    .info-sub {
        display: flex;
        justify-content: space-around;
        align-items: center;

        margin: 15px;
        padding-left: 15px;
        padding-right: 15px;
        padding-top: 15px;
        padding-bottom: 15px;

        gap: 25px;


        /* border: 5px solid pink; */
        
        
        
    }

        .outer-box {
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            
            /* border: 5px solid yellow; */

        }

        

        .second-text {
            display: flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            font-size: 24px;
            margin-top: 25px;
            color: #1F2937;

            /* border: 5px solid red; */

        }

        .box {
            border: 5px solid #3882F6;
            border-radius: 25px;
            width: 200px;
            height: 200px;
            margin-bottom: 15px;
            margin-top: 0px;



        }

        .sub-text2 {
            text-align: center;
            padding: 10px;
            margin-left: 15px;
            margin-right: 15px;
            width: 100px;
            color: #1F2937;
            
            /* border: 5px solid gray; */

        }



    .quote {
        
        background-color: #E5E7EB;
        text-align: center;
        padding-top: 50px;        
        padding-bottom: 50px;        
        padding-left: 300px;
        padding-right: 300px;


        
    }

        .quote-txt {
            font-size: 36px;
            padding-bottom: 15px;
        }

        .quote-author {
            text-align: right;
            font-weight: bold;
        }

    .action-call {
        display: flex;
        justify-content: center;
        align-items: center;

        padding-left: 100px;
        padding-right: 100px;


        /* border: 4px solid lightcoral; */
        
    }

        .action-call-box {
            display: flex;
            justify-content: space-around;
            align-items: center;
            background-color: #3882F6;
            padding-top: 50px;
            padding-bottom: 50px;
            padding-left: 20px;
            padding-right: 20px;
            margin: 50px;
            border-radius: 10px;
            width: 1000px;

            /* border: 5px solid red; */

        }

            .ac-text {
                display: flex;
                flex-direction: column;
                justify-content: flex-start;
                color: #F9FAF8;
                text-align: left;

                /* border: 5px solid red;             */
            }

            .ac-button {
                display: flex;
                flex-wrap: nowrap;
                justify-content: center;
                align-items: center;
                border: 2px solid #F9FAF8;
                border-radius: 5px;
                padding: 8px;
                width: 100px;
                height: 25px;
                color: #F9FAF8;
            }

        .third-text {
            font-size: 24px;
            padding-left: 10px;

        }

        .button-alt {

        }

/* FOOTER */

.footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 5px;
    
    background-color: #1F2937;
    color:#F9FAF8;
    padding-top: 10px;
    padding-bottom: 10px;

    /* border: 5px solid lightblue; */

    padding-left: 200px;
    padding-right: 200px;
}

    .sub-text-alt {
        font-size: 15px;

    }

    .signature {
        font-size: 12px;

    }

